LRDOCS-7716 rewrite tuning-your-jvm.md